--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DNMF
-Version: 1.3.1
-Date: 2015-06-21
+Version: 1.4.0
+Date: 2021-05-09
 Title: Discriminant Non-Negative Matrix Factorization
 Authors@R: c(person("Zhilong", "Jia", role =c("aut", "cre"), 
     email="zhilongjia@gmail.com"), 
@@ -14,6 +14,6 @@ Imports:
     parallel,
     doParallel
 License: GPL (>= 2)
-LazyData: true
 URL: https://github.com/zhilongjia/DNMF
 BugReports: https://github.com/zhilongjia/DNMF/issues
+RoxygenNote: 7.1.1
